[package]
name = "rstar"
version = "0.8.2"
authors = ["Stefan Altmayer <stoeoef@gmail.com>"]
description = "R*-tree library for the rust ecosystem"
documentation = "https://docs.rs/rstar/"
repository = "https://github.com/Stoeoef/rstar"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
keywords = ["rtree", "r-tree", "rstar", "spatial", "nearest-neighbor"]
categories = ["data-structures", "algorithms"]

[badges]
travis-ci = { repository = "Stoeoef/rstar", branch = "master" }
codecov = { repository = "Stoeoef/rstar", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
heapless = "0.5"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
pdqselect = { version = "0.1", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
num = { version = "0.3.0", default-features = false, features = ["libm"] }
smallvec = "1.4"

[features]
default = [ "std" ]
std = [ "num-traits/std" ]
debug = []

[dev-dependencies]
rand = "0.7"
rand_hc = "0.2"
approx = "0.3"
serde_json = "1.0"
